--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -19,7 +19,7 @@
 
         <ImageView
 
-            android:layout_width="187dp"
+            android:layout_width="196dp"
             android:layout_height="236dp"
             android:layout_alignParentStart="true"
 
@@ -44,7 +44,9 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
 
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="487dp">
 
 
         <Button
@@ -55,7 +57,7 @@
             android:layout_margin="8dp"
             android:layout_weight="1"
             android:shadowColor="@android:color/black"
-            android:text="Sign Up"/>
+            android:text="Sign Up" />
         <!--android:textColor="@android:color/white"
       app:cornerRadius="4dp"
        app:shadowEnabled="true"
@@ -71,16 +73,15 @@
             android:layout_weight="1"
             android:shadowColor="@android:color/black"
             android:text="Sign In"
-            android:textColor="@android:color/white"/>
+            android:textColor="@android:color/white" />
         <!-- app:cornerRadius="4dp"
          app:shadowEnabled="true"
          app:shadowHeight="5dp"
          app:buttonColor="@color/fbutton_color_pumpkin"-->
 
 
-
- </LinearLayout>
-
+    </LinearLayout>
 
 
-</RelativeLayout>
+
+</android.support.constraint.ConstraintLayout>
