--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,80 +8,74 @@
     tools:context=".MainActivity">
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="55dp"
-        android:orientation="vertical">
-
-
-        <ImageView
-
-            android:layout_width="196dp"
-            android:layout_height="236dp"
-            android:layout_alignParentStart="true"
-
-            android:layout_marginStart="83dp"
-            android:src="@drawable/logo" />
-
-        <TextView
-            android:id="@+id/txtSlogan"
-            android:layout_width="200dp"
-            android:layout_height="100dp"
-            android:layout_marginStart="83dp"
-            android:gravity="center"
-            android:text="@string/slogan"
-            android:textColor="@android:color/white" />
-
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-
-        android:orientation="horizontal"
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="198dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="247dp"
+        android:layout_marginTop="62dp"
+        android:src="@drawable/logo"
+        app:layout_constraintBottom_toTopOf="@+id/btnSignUp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="487dp">
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/txtSlogan"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginBottom="99dp"
+        android:gravity="center"
+        android:text="@string/slogan"
+        android:textColor="@android:color/white"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/btnSignIn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
 
-        <Button
+    <Button
 
-            android:id="@+id/btnSignUp"
-            android:layout_width="63dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:layout_weight="1"
-            android:shadowColor="@android:color/black"
-            android:text="Sign Up" />
-        <!--android:textColor="@android:color/white"
+        android:id="@+id/btnSignUp"
+        android:layout_width="220dp"
+        android:layout_height="37dp"
+        android:layout_margin="8dp"
+        android:layout_weight="1"
+        android:background="@color/overlay_background"
+        android:text="Sign Up"
+        android:textColor="@android:color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/btnSignIn"
+        app:layout_constraintTop_toBottomOf="@+id/txtSlogan"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <!--android:textColor="@android:color/white"
       app:cornerRadius="4dp"
        app:shadowEnabled="true"
        app:shadowHeight="5dp"
        app:buttonColor="@color/fbutton_color_pumpkin"-->
 
-        <Button
+    <Button
 
-            android:id="@+id/btnSignIn"
-            android:layout_width="63dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:layout_weight="1"
-            android:shadowColor="@android:color/black"
-            android:text="Sign In"
-            android:textColor="@android:color/white" />
-        <!-- app:cornerRadius="4dp"
+        android:id="@+id/btnSignIn"
+        android:layout_width="223dp"
+        android:layout_height="36dp"
+        android:layout_margin="8dp"
+        android:layout_weight="1"
+        android:background="@color/overlay_background"
+        android:shadowColor="@android:color/black"
+        android:text="Sign In"
+        android:textColor="@android:color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/btnSignUp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtSlogan" />
+    <!-- app:cornerRadius="4dp"
          app:shadowEnabled="true"
          app:shadowHeight="5dp"
          app:buttonColor="@color/fbutton_color_pumpkin"-->
-
-
-    </LinearLayout>
-
 
 
 </android.support.constraint.ConstraintLayout>
