Povoar fot database + tweaks

--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -9,7 +9,7 @@
     <TextView
         android:id="@+id/password1"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="60dp"
         android:layout_marginEnd="1dp"
         android:layout_marginStart="1dp"
         android:background="@color/overlay_background"
@@ -17,14 +17,15 @@
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toTopOf="@+id/btnEditPassword"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnEditEmail" />
 
     <TextView
         android:id="@+id/email"
         android:layout_width="0dp"
-        android:layout_height="61dp"
-        android:layout_marginBottom="459dp"
+        android:layout_height="54dp"
+        android:layout_marginBottom="460dp"
         android:layout_marginEnd="1dp"
         android:layout_marginStart="1dp"
         android:background="@color/overlay_background"
@@ -32,6 +33,7 @@
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button3" />
 
@@ -52,7 +54,7 @@
     <TextView
         android:id="@+id/username"
         android:layout_width="0dp"
-        android:layout_height="52dp"
+        android:layout_height="53dp"
         android:layout_marginEnd="1dp"
         android:layout_marginStart="1dp"
         android:background="@color/overlay_background"
@@ -61,6 +63,7 @@
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toTopOf="@+id/btnEditEmail"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -103,7 +106,7 @@
     <Button
         android:id="@+id/btnEditEmail"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="49dp"
         android:layout_marginBottom="6dp"
         android:background="@color/overlay_background"
         android:text="Edit"
