--- a/app/src/main/res/layout/activity_my_profile.xml
+++ b/app/src/main/res/layout/activity_my_profile.xml
@@ -8,10 +8,23 @@
     tools:context=".MyProfile">
 
 
+    <TextView
+        android:id="@+id/name"
+        android:layout_width="363dp"
+        android:layout_height="33dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="108dp"
+        android:background="@color/overlay_background"
+        android:text="MyName"
+        android:textColor="@android:color/white"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/photo" />
+
     <ImageView
         android:id="@+id/photo"
         android:layout_width="335dp"
-        android:layout_height="100dp"
+        android:layout_height="171dp"
 
         android:layout_marginBottom="192dp"
         android:layout_marginEnd="8dp"
@@ -29,19 +42,20 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="49dp"
         android:text="Edit"
+        android:background="@color/overlay_background"
+        android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.53"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/photo"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.994" />
 
     <TextView
         android:id="@+id/email"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="124dp"
+        android:layout_width="363dp"
+        android:layout_height="33dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="144dp"
         android:background="@color/overlay_background"
         android:text="My email: android123@andoid.com"
         android:textColor="@android:color/white"
@@ -53,7 +67,7 @@
         android:id="@+id/description"
         style="@android:style/Widget.Holo.Light.AutoCompleteTextView"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="166dp"
         android:layout_marginBottom="209dp"
         android:layout_marginEnd="10dp"
         android:layout_marginStart="10dp"
@@ -67,6 +81,7 @@
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/photo" />
 </android.support.constraint.ConstraintLayout>
