--- a/app/src/main/res/layout/activity_privacy.xml
+++ b/app/src/main/res/layout/activity_privacy.xml
@@ -1,23 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
-    tools:context=".Help">
-
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".Privacy"
+    android:background="@drawable/background">
 
     <TextView
         android:id="@+id/username"
         android:layout_width="417dp"
         android:layout_height="521dp"
         android:background="@color/overlay_background"
-        android:text="@string/Help"
+        android:text="@string/Privacy"
         android:textAppearance="@style/TextAppearance.AppCompat"
         android:textColor="@android:color/white"
         android:textSize="18sp"
-        app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="-8dp" />
 
 
