--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -11,61 +11,59 @@
         android:id="@+id/password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/age"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="100dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Password"
         android:textColor="@android:color/white"
-        android:textStyle="bold" />
+        android:textStyle="normal" />
 
     <EditText
         android:id="@+id/telemovel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/email1"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="215dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Telemovel"
         android:textColor="@android:color/white"
-        android:textStyle="bold" />
+        android:textStyle="normal" />
 
     <EditText
         android:id="@+id/email1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_below="@+id/name1"
+        android:layout_centerHorizontal="true"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Email"
         android:textColor="@android:color/white"
-        android:textStyle="bold" />
+        android:textStyle="normal" />
 
     <EditText
         android:id="@+id/age"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/telemovel"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="157dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Age"
         android:textColor="@android:color/white"
-        android:textStyle="bold" />
+        android:textStyle="normal" />
 
     <LinearLayout
 
-        android:orientation="vertical"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_centerInParent="true"
-
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="270dp"
+        android:orientation="vertical">
 
     </LinearLayout>
 
@@ -101,20 +99,21 @@
         android:text="Name"
         android:textAllCaps="false"
         android:textColor="@android:color/white"
-        android:textStyle="bold" />
+        android:textStyle="normal" />
 
     <Button
 
         android:id="@+id/btnSignUp"
-        android:layout_width="63dp"
+        android:layout_width="212dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="19dp"
+        android:layout_alignStart="@+id/password"
+        android:layout_marginBottom="21dp"
         android:layout_weight="1"
+        android:background="@color/overlay_background"
         android:shadowColor="@android:color/black"
         android:text="SignUp"
-        android:textColor="@android:color/white"/>
+        android:textColor="@android:color/white" />
        <!-- app:buttonColor="@color/fbutton_color_pumpkin"
         app:cornerRadius="4dp"
         app:shadowEnabled="true"
