--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,26 +11,24 @@
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="198dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="247dp"
-        android:layout_marginTop="62dp"
+        android:layout_height="155dp"
+        android:layout_marginTop="60dp"
         android:src="@drawable/logo"
-        app:layout_constraintBottom_toTopOf="@+id/btnSignUp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/txtSlogan"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_marginBottom="99dp"
+        android:layout_width="276dp"
+        android:layout_height="35dp"
+        android:layout_marginTop="15dp"
         android:gravity="center"
         android:text="@string/slogan"
         android:textColor="@android:color/white"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/btnSignIn"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
@@ -39,8 +37,9 @@
 
         android:id="@+id/btnSignUp"
         android:layout_width="220dp"
-        android:layout_height="37dp"
+        android:layout_height="52dp"
         android:layout_margin="8dp"
+        android:layout_marginTop="176dp"
         android:layout_weight="1"
         android:background="@color/overlay_background"
         android:text="Sign Up"
@@ -49,7 +48,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btnSignIn"
         app:layout_constraintTop_toBottomOf="@+id/txtSlogan"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.936" />
 
     <!--android:textColor="@android:color/white"
       app:cornerRadius="4dp"
@@ -61,7 +60,7 @@
 
         android:id="@+id/btnSignIn"
         android:layout_width="223dp"
-        android:layout_height="36dp"
+        android:layout_height="52dp"
         android:layout_margin="8dp"
         android:layout_weight="1"
         android:background="@color/overlay_background"
@@ -71,7 +70,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btnSignUp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtSlogan" />
+        app:layout_constraintTop_toBottomOf="@+id/txtSlogan"
+        app:layout_constraintVertical_bias="0.937" />
     <!-- app:cornerRadius="4dp"
          app:shadowEnabled="true"
          app:shadowHeight="5dp"
