--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -25,9 +25,9 @@
     <item android:title="Communicate">
         <menu>
             <item
-                android:id="@+id/nav_share"
+                android:id="@+id/location"
                 android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
+                android:title="Location" />
             <item
                 android:id="@+id/nav_send"
                 android:icon="@drawable/ic_menu_send"
