--- a/app/src/main/res/layout/activity_event.xml
+++ b/app/src/main/res/layout/activity_event.xml
@@ -14,7 +14,7 @@
         android:layout_height="39dp"
         android:layout_marginEnd="6dp"
         android:layout_marginStart="6dp"
-        android:layout_marginTop="348dp"
+        android:layout_marginTop="388dp"
         android:background="@color/overlay_background"
         android:text="Horario: "
         android:textColor="@android:color/white"
@@ -30,7 +30,7 @@
         android:layout_height="39dp"
         android:layout_marginEnd="6dp"
         android:layout_marginStart="6dp"
-        android:layout_marginTop="312dp"
+        android:layout_marginTop="352dp"
         android:background="@color/overlay_background"
         android:text="Data do evento:"
         android:textColor="@android:color/white"
@@ -47,7 +47,7 @@
         android:layout_marginBottom="116dp"
         android:layout_marginEnd="6dp"
         android:layout_marginStart="6dp"
-        android:layout_marginTop="212dp"
+        android:layout_marginTop="252dp"
         android:background="@color/overlay_background"
         android:text="Descrição do Evento:"
         android:textColor="@android:color/white"
@@ -89,10 +89,11 @@
     <ImageView
         android:id="@+id/imagem"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="95dp"
         android:layout_marginBottom="374dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/clubName"
         app:srcCompat="@drawable/ic_event_note_black_24dp" />
